# MAIPle

./: pyproject.toml  setup.py
maiple/: actuator.py  percept.py  perception.py
maiple/reaction/: simple.py
tests/: test_simple.py
